[package]
name = "flame"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "=1.0.1"
chrono = { version = "0.4.*", features = ["serde"] }
itertools = "0.13.0"
clap = { version = "4.*", features = [ "derive" ] }
colored = "2.1.0"
termimad = "0.30.0"